modified little mobile vision and can finally press enter

--- a/src/App.css
+++ b/src/App.css
@@ -48,3 +48,8 @@ button, input {
   border: 1px solid black;
   margin-top: 1vh;
 }
+@media (max-width: 1100px) {
+  .questionCenter {
+    flex-direction: column;
+  }
+}
